feat: delete workspace feature added
